# UrbanPulseVN

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.kafka.yaml  docker-compose.monitoring.yaml  docker-compose.yaml  implementation_plan.md  problem.txt  pyproject.toml  requirements.txt  warnings.md
.agents/workflows/: verify-sprint.md
.cursor/rules/: 00-core-constraints.mdc  01-python-crawlers.mdc  02-airflow.mdc  03-spark-iceberg.mdc  04-dbt-sql.mdc
airflow/dags/: dbt_transformation_dag.py  ingestion_dag.py
configs/: datalake.yaml  spark.yaml
dbt_transform/: .user.yml  dbt_project.yml  packages.yml
dbt_transform/macros/: calculate_aqi.sql  calculate_risk_score.sql
dbt_transform/seeds/: pollutant_standards.csv  vietnam_cities.csv  vietnam_rivers.csv
dbt_transform/tests/: assert_aqi_range.sql
docs/: ADR.md  PRD.md  architecture.md  sprint_0_report.md  sprint_1_report.md  sprint_2_report.md  sprint_3_report.md
ingestion/: __init__.py  config.py  pipeline.py
ingestion/crawlers/: __init__.py  base_crawler.py  cem_aqi_crawler.py  nchmf_disaster_crawler.py
ingestion/extractors/: __init__.py  air_quality.py  base.py  fire_hotspot.py  flood.py  geo_features.py  weather.py
ingestion/loaders/: __init__.py  minio_loader.py  postgres_loader.py
scripts/: init-db.sql
spark_jobs/: bronze_to_silver_cleaning.py  silver_to_gold_partitioning.py
streaming/: __init__.py
streaming/producer/: __init__.py  (+1 more)
tests/: conftest.py
utils/: __init__.py  helper.py  minio_utils.py  postgresql_client.py  redis_client.py
(+31 files in other folders)
